Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/bn/messages.json
+++ b/platform/mv3/extension/_locales/bn/messages.json
@@ -16,7 +16,7 @@
     "description": "English: uBO Lite — Dashboard"
   },
   "settingsPageName": {
-    "message": "পছন্দসমূহ",
+    "message": "সেটিংস",
     "description": "appears as tab name in dashboard"
   },
   "aboutPageName": {
