--- a/src/_locales/bn/messages.json
+++ b/src/_locales/bn/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "সোশ্যাল উইজেট",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "কুকি নোটিশ",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "আপনার কাস্টম ফিল্টারটি চালু করুন",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "কাস্টম ফিল্টারকে বিশ্বস্ততার অনুমতি দিন",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
