--- a/src/_locales/ml/messages.json
+++ b/src/_locales/ml/messages.json
@@ -400,7 +400,7 @@
     "description": "background information: https://github.com/uBlockOrigin/uBlock-issues/issues/1513"
   },
   "settingsAdvanced": {
-    "message": "Advanced",
+    "message": "വിപുലമായ ക്രമീകരണങ്ങൾ",
     "description": "Section for controlling advanced-user settings"
   },
   "settingsAdvancedSynopsis": {
@@ -528,7 +528,7 @@
     "description": "used as a tooltip for the clock icon beside a list"
   },
   "3pUpdating": {
-    "message": "അപ്‌ഡേറ്റുചെയ്യുന്നു ...",
+    "message": "അപ്‌ഡേറ്റുചെയ്യുന്നു...",
     "description": "used as a tooltip for the spinner icon beside a list"
   },
   "3pNetworkError": {
@@ -896,7 +896,7 @@
     "description": "Label for radio-button to pick export text format"
   },
   "supportOpenButton": {
-    "message": "Open",
+    "message": "തുറക്കുക",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
