--- a/platform/mv3/extension/_locales/bn/messages.json
+++ b/platform/mv3/extension/_locales/bn/messages.json
@@ -154,5 +154,9 @@
   "autoReloadLabel": {
     "message": "ফিল্টারিং মোড পরিবর্তন করার সময় স্বয়ংক্রিয়ভাবে পুনরায় লোড করুন",
     "description": "Label for a checkbox in the options page"
+  },
+  "showBlockedCountLabel": {
+    "message": "Show the number of blocked requests on the toolbar icon",
+    "description": "Label for a checkbox in the options page"
   }
 }
