--- a/platform/mv3/extension/_locales/fr/messages.json
+++ b/platform/mv3/extension/_locales/fr/messages.json
@@ -154,5 +154,9 @@
   "autoReloadLabel": {
     "message": "Recharger automatiquement la page lors du changement de mode de filtrage",
     "description": "Label for a checkbox in the options page"
+  },
+  "showBlockedCountLabel": {
+    "message": "Show the number of blocked requests on the toolbar icon",
+    "description": "Label for a checkbox in the options page"
   }
 }
