--- a/platform/mv3/extension/_locales/sr/messages.json
+++ b/platform/mv3/extension/_locales/sr/messages.json
@@ -154,5 +154,9 @@
   "autoReloadLabel": {
     "message": "Аутоматски поново учитај страницу при промени режима филтрирања",
     "description": "Label for a checkbox in the options page"
+  },
+  "showBlockedCountLabel": {
+    "message": "Show the number of blocked requests on the toolbar icon",
+    "description": "Label for a checkbox in the options page"
   }
 }
