--- a/platform/mv3/extension/_locales/bg/messages.json
+++ b/platform/mv3/extension/_locales/bg/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Show the number of blocked requests on the toolbar icon",
+    "message": "Показване на брояч в иконката за блокираните заявки",
     "description": "Label for a checkbox in the options page"
   }
 }
