--- a/platform/mv3/extension/_locales/br_FR/messages.json
+++ b/platform/mv3/extension/_locales/br_FR/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Show the number of blocked requests on the toolbar icon",
+    "message": "Diskouez an niver a rekedoù bet stanket war arouez ar varrenn-ostilhoù",
     "description": "Label for a checkbox in the options page"
   }
 }
