--- a/platform/mv3/extension/_locales/vi/messages.json
+++ b/platform/mv3/extension/_locales/vi/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Show the number of blocked requests on the toolbar icon",
+    "message": "Hiện số lượng yêu cầu bị chặn trên biểu tượng thanh công cụ",
     "description": "Label for a checkbox in the options page"
   }
 }
