--- a/src/_locales/gl/messages.json
+++ b/src/_locales/gl/messages.json
@@ -544,7 +544,7 @@
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Requerir confiar nos filtros personalizados",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
