--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -16,7 +16,7 @@
     "description": "A warning in the dashboard when navigating away from unsaved changes"
   },
   "dashboardUnsavedWarningStay": {
-    "message": "रुकें",
+    "message": "यहाँ रुकें",
     "description": "Label for button to prevent navigating away from unsaved changes"
   },
   "dashboardUnsavedWarningIgnore": {
