--- a/platform/mv3/extension/_locales/hi/messages.json
+++ b/platform/mv3/extension/_locales/hi/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Show the number of blocked requests on the toolbar icon",
+    "message": "टूलबार आइकन पर अवरुद्ध अनुरोधों की संख्या दिखाएं",
     "description": "Label for a checkbox in the options page"
   }
 }
