--- a/platform/mv3/extension/_locales/kn/messages.json
+++ b/platform/mv3/extension/_locales/kn/messages.json
@@ -44,7 +44,7 @@
     "description": "Label to be used to hide popup panel sections"
   },
   "3pGroupDefault": {
-    "message": "Default",
+    "message": "ಪೂರ್ವನಿಯೋಜಿತ",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAds": {
