Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/uk/messages.json
+++ b/platform/mv3/extension/_locales/uk/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Показувати кількість заблокованих запитів на піктограмі",
+    "message": "Показувати кількість заблокованих запитів на піктограмі на панелі інструментів",
     "description": "Label for a checkbox in the options page"
   }
 }
