--- a/platform/mv3/extension/_locales/ro/messages.json
+++ b/platform/mv3/extension/_locales/ro/messages.json
@@ -144,7 +144,7 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "Lista numelor mașinilor pentru care nu se va face filtrare",
+    "message": "Lista numelor site-urilor pentru care nu se va face filtrare",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "noFilteringModePlaceholder": {
