--- a/platform/mv3/extension/_locales/sq/messages.json
+++ b/platform/mv3/extension/_locales/sq/messages.json
@@ -144,11 +144,11 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "Emrat e hosteve që nuk do të kalojnë në filtër",
+    "message": "Lista e uebsajteve që nuk do të kalojnë në filtër.",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "noFilteringModePlaceholder": {
-    "message": "[hostnames only]\nexample.com\ngames.example\n...",
+    "message": "[vetëm emrat e hosteve]\nshembull.com\nlojera.shembull\n...",
     "description": "Default text for in edit field"
   },
   "behaviorSectionLabel": {
