--- a/src/_locales/fi/messages.json
+++ b/src/_locales/fi/messages.json
@@ -544,7 +544,7 @@
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Salli omat suodattimet, joihin luotat",
+    "message": "Salli luottamusta edellyttävät omat suodattimet",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
@@ -1264,7 +1264,7 @@
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
   "toggleJavascript": {
-    "message": "Kytke JavaScript käyttöön/pois käytöstä",
+    "message": "Kytke JavaScript",
     "description": "Label for keyboard shortcut used to toggle no-scripting switch"
   },
   "relaxBlockingMode": {
